# self-employed-tax

./: .gitignore  README.md  example.env  pyproject.toml  pytest.ini
nalog_lk/: __init__.py  app.py
tests/: test_nalog_lk.py
